--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "com.example.hello",
+  "name": "task-manager",
   "version": "1.0.0",
   "private": true,
   "dependencies": {
@@ -10,6 +10,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -48,17 +49,14 @@
   "author": "DataCyber-OrChuban, react.cordova: Apache Cordova Team and React.js",
   "license": "Apache-2.0",
   "devDependencies": {
-    "cordova-browser": "^6.0.0",
-    "cordova-plugin-badge": "^0.8.8",
-    "cordova-plugin-device": "^2.1.0",
-    "cordova-plugin-local-notification": "^0.9.0-beta.2"
+    "cordova-android": "^10.1.2",
+    "cordova-browser": "^6.0.0"
   },
   "cordova": {
     "platforms": [
-      "browser"
+      "browser",
+      "android"
     ],
-    "plugins": {
-      "cordova-plugin-local-notification": {}
-    }
+    "plugins": {}
   }
 }
